# llama-on-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/model/: mod.rs
src/web/: handlers.rs  models.rs  routes.rs
static/css/: styles.css
static/js/: app.js
templates/: index.html
