[package]
name = "llama-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full", "rt"] }
env_logger = "0.10"
log = "0.4"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["metal"] }
tera = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
rand = "0.8.5"
anyhow = "1.0.97"
reqwest = { version = "0.11", features = ["json"] }